wrapped content of splitview and fixed button placement x2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,12 +68,13 @@ p {
 .h1-indent {
   margin-left: 10%;
   margin-bottom: 63px;
+  margin-right: 164px;
   display: inline-block;
 }
 
 .new-app-btn {
   display: inline-block;
-  float: right;
-  margin-right: 250px;
+  /* float: right; */
+  /* margin-right: 26%; */
   margin-top: 8px;
 }
